--- a/site/afac.castelnuovo.xyz/views/index.html
+++ b/site/afac.castelnuovo.xyz/views/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>afac.castelnuovo.xyz</title>
+    <title>afac.castelnuovo.dev</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:400,300,600" type="text/css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css" />
@@ -14,7 +14,7 @@
         <div class="row">
             <div class="columns six">
                 <div class="row">
-                    <h1>afac.castelnuovo.xyz</h1>
+                    <h1>afac.castelnuovo.dev</h1>
                     <p>Kijk nu of je swapfiets gevonden is!</p>
                 </div>
 
@@ -72,7 +72,7 @@
                 <form id="subscriptionForm" method="post" action="/action/subscribe">
                     <div class="row">
                         <label for="email">Je email</label>
-                        <input class="u-full-width" type="email" required="required" placeholder="test@castelnuovo.xyz"
+                        <input class="u-full-width" type="email" required="required" placeholder="test@castelnuovo.dev"
                             id="email" name="email" />
                     </div>
 
