--- a/site/afac.castelnuovo.xyz/views/unsubscribe.html
+++ b/site/afac.castelnuovo.xyz/views/unsubscribe.html
@@ -2,7 +2,7 @@
 <html lang="nl">
     <head>
         <meta charset="utf-8" />
-        <title>Afgemeld - afac.castelnuovo.xyz</title>
+        <title>Afgemeld - afac.castelnuovo.dev</title>
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <link
             href="//fonts.googleapis.com/css?family=Raleway:400,300,600"
